# lobo

./: pyproject.toml  solicitudes.db
database/: db_manager.py
src/pages/: admin_page.py  login_page.py
src/pages/test/: test_adeudos.py  test_inventario.py  test_validar_usuario.py
