[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mi_proyecto_flet"
version = "0.1.0"
description = "Proyecto universitario PWA en Flet"
authors = ["Diego"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flet = "^0.28.0"
requests = "^2.31.0"

[tool.poetry.scripts]
run = "main:main"

[tool.flet]
web-renderer = "html"
